updated couchbase url

--- a/couchbase/qa/application.properties
+++ b/couchbase/qa/application.properties
@@ -1,4 +1,4 @@
-cache.client.url = couchbase
+cache.client.url = docker05.helpchat.in
 cache.client.bucket = default
 cache.client.bucketCatalog = catalog
 cache.client.password=
