--- a/redis/qa/application.properties
+++ b/redis/qa/application.properties
@@ -1,5 +1,5 @@
-redis.cache.url=172.16.1.113
-redis.cache.slaveurl=172.16.1.113
+redis.cache.url=docker05.helpchat.in
+redis.cache.slaveurl=docker05.helpchat.in
 redis.cache.port=6379
 redis.cache.username=
 redis.cache.password=
