test redis config

--- a/redis/qa/application.properties
+++ b/redis/qa/application.properties
@@ -1,4 +1,4 @@
-redis.cache.url=docker05.helpchat.in
+redis.cache.url=asfds.helpchat.in
 redis.cache.slaveurl=docker05.helpchat.in
 redis.cache.port=6379
 redis.cache.username=
