--- a/redis/qa/application.properties
+++ b/redis/qa/application.properties
@@ -1,5 +1,6 @@
+redis.cache.url=docker05.helpchat.in
 redis.cache.slaveurl=docker05.helpchat.in
 redis.cache.port=6379
 redis.cache.username=
 redis.cache.password=
-redis.cache.is.cluser.enable=false
+redis.cache.is.cluster.enable=false
